add single select to job_experience

--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -14,7 +14,7 @@
 <%= f.input :industry %>
 <p><%= f.input :source %></p>
 <%= f.association :city %>
-<%= f.input :contact_email %>
+<!-- <%= f.input :contact_email %> -->
 
 <%= f.label :scale %>：
 <div class="btn-group">
@@ -33,6 +33,17 @@
   <label class="btn btn-default">
     <%= f.radio_button :status, status %>
     <%= t(status, :scope => "job.status") %>
+  </label>
+  <% end %>
+</div>
+  <br>
+  <br>
+<%= f.label :job_experience %>：
+<div class="btn-group">
+  <% Job::JOB_EXPERIENCE.each do |job_experience| %>
+  <label class="btn btn-default">
+    <%= f.radio_button :job_experience, job_experience %>
+    <%= job_experience %>
   </label>
   <% end %>
 </div>
