--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -15,7 +15,7 @@
           |
           <%= @job.job_experience %>
           |
-          <%= @job.education.try(:name) %></p>
+          <%= @job.education_background %></p>
         <em class="skill_show"><%= @job.skill %></em>
 
       </div>
