connect profile and user

--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -16,7 +16,7 @@
       <% else %>
         <br>
         <li class="label label-default" style="font-size:100%"><%= t( "hello", :name => current_user.email) %></li>
-        <li><%= link_to('修改个人资料', edit_user_path) %></li>
+        <li><%= link_to('修改个人资料 |', edit_user_path) %></li> 
         <% if current_user.admin? %>
         <li><%= link_to("Admin Panel", admin_jobs_path) %></li>
         <li><%= link_to('用户管理', admin_users_path) %></li>
