--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <h2>Edit User</h2>
 
 <%= form_for @user do |f| %>
@@ -7,8 +8,43 @@
     <%= f.time_zone_select :time_zone %>
   </div>
 
+  <%= f.fields_for :profile do |f| %>
+
+  <div class="form-group">
+    <%= f.label :legal_name %>
+    <%= f.text_field :legal_name, :class => "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :username %>
+    <%= f.text_field :username, :class => "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :wechat %>
+    <%= f.text_field :wechat, :class => "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :birthday %>
+    <%= f.date_field :birthday, :class => "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :location %>
+    <%= f.text_field :location, :class => "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :motto %>
+    <%= f.text_area :motto, :class => "form-control" %>
+  </div>
+
+  <% end %>
+
   <div class="form-group">
     <%= f.submit "Save", :class => "btn btn-primary" %>
   </div>
 
 <% end %>
+</div>
