--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -7,12 +7,14 @@
         <th>ID</th>
         <th>Email</th>
         <th>Actions</th>
+        <th>Profile</th>
       </tr>
       <% @users.each do |user| %>
       <tr>
         <td><%= user.id %></td>
         <td><%= user.email %></td>
         <td><%= link_to "Edit", edit_admin_user_path(user), :class => "btn btn-default" %></td>
+        <td><%= link_to "show", admin_user_profile_path(user), :class => "btn btn-default" %></td>
       </tr>
       <% end %>
     </table>
