--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -27,7 +27,7 @@
 
   <div class="form-group">
     <%= f.label :birthday %>
-    <%= f.date_field :birthday, :class => "form-control" %>
+    <%= f.text_field :birthday, :class => "form-control" %>
   </div>
 
   <div class="form-group">
@@ -48,3 +48,7 @@
 
 <% end %>
 </div>
+
+<script>
+  $("#user_profile_attributes_birthday").datepicker({ format: "yyyy-mm-dd"});
+</script>
