--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -13,6 +13,19 @@
 <%= f.input :source %>
 <p><%= f.association :city %></p>
 <!-- <%= f.input :contact_email %> -->
+
+<div class="form-group">
+  <p>技能标签：</p>
+  <%= f.add_nested_fields_link :tickets, "新增", :class => "btn btn-default" %>
+<%= f.nested_fields_for :tickets do |ff| %>
+
+  <%= ff.text_field :name, :class => "form-control" %>
+<%= ff.remove_nested_fields_link "移除", :class => "btn btn-danger" %>
+
+<% end %>
+
+</div>
+
 <br>
 <%= f.label :scale %>：
 <div class="btn-group">
@@ -69,19 +82,8 @@
 </label>
 <% end %>
 </div>
-    <legend>Ticket</legend>
-<%= f.nested_fields_for :tickets do |ff| %>
-  <fieldset style="border-left: 5px solid #bbb; margin-bottom: 10px; padding: 10px;">
 
-      <%= ff.label :name %>
-      <%= ff.text_field :name, :class => "form-control" %>
 
-    <%= ff.remove_nested_fields_link "移除", :class => "btn btn-danger" %>
-  </fieldset>
-  <p class="pull-right">
-    <%= f.add_nested_fields_link :tickets, "新增", :class => "btn btn-default" %>
-  </p>
-<% end %>
 
 <hr>
 <%= f.input :description, as: :ckeditor %>
@@ -89,6 +91,7 @@
 
 <%= f.submit "Submit" %>
 <% end %>
+
 
 
 <script>
