--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,16 @@
  @import "select2";
  @import "select2-bootstrap";
  @import "bootstrap-datepicker3";
+ @import "jquery-ui";
 
+
+ .sortable .sortable_icon {
+   border :none;
+   color: #ECECEC;
+   font-size: 20px;
+   cursor: move;
+   padding-right: 10px;
+ }
 
 body {
   background-color: #e7e5d9;
