--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -12,31 +12,29 @@
       <th><%= check_box_tag "全选", "1", false, :id => "toggle_all" %></th>
       <td>职缺</td>
       <td>薪资</td>
-      <td>工作来源</td>
-      <td>城市</td>
-      <td>公司规模</td>
       <td>管理选项</td>
-      <td>刊登时间</td>
+      <td>创建时间</td>
     </tr>
   </thead>
+  <tbody class="sortable">
   <% @jobs.each do |job| %>
-  <tr>
+  <tr data-reorder-url="<%= reorder_admin_job_path(job) %>">
     <td><%= check_box_tag "ids[]", job.id %></td>
     <td>
+      <span class="sortable_icon">☰</span>
       <%= render_job_status(job) %>
-      <%= link_to(job.title, admin_job_path(job)) %>
+      <%= link_to job.title, admin_job_path(job) %>
     </td>
     <td> <%= job.wage_lower_bound %> ~ <%= job.wage_upper_bound %></td>
-    <td> <%= job.source %></td>
-    <td> <%= job.place %></td>
-    <td> <%= job.scale %></td>
     <td>
       <%= link_to("Edit", edit_admin_job_path(job), :class => "btn btn-xs btn-info") %>
       <%= link_to("Destroy", admin_job_path(job), :method => :delete, :class => "btn btn-xs btn-danger", :data => { :confirm => "Are you sure?" }) %>
+      <%= link_to "置顶", reorder_admin_job_path(job, :position => :first), :method => :post, :class => "btn btn-xs btn-primary" %>
+      <%= link_to "置底", reorder_admin_job_path(job, :position => :last), :method => :post, :class => "btn btn-xs btn-success" %>
 
       <% if job.is_hidden %>
 
-        <%= link_to("Publish", publish_admin_job_path(job), :method => :post, :class => "btn btn-xs btn-success") %>
+        <%= link_to("Publish", publish_admin_job_path(job), :method => :post, :class => "btn btn-xs btn-info") %>
       <% else %>
         <%= link_to("Hide", hide_admin_job_path(job), :method => :post, :class => "btn btn-xs btn-warning") %>
       <% end %>
@@ -46,12 +44,13 @@
     </td>
   </tr>
   <% end %>
+</tbody>
 </table>
 
 <p>
-  <%= select_tag :job_status, options_for_select( Job::STATUS.map{ |s| [t(s, :scope => + "job.status"), s] }), :class => "form-control" %>
+  <%= select_tag :job_status, options_for_select( Job::STATUS.map{ |s| [t(s, :scope =>  "job.status"), s] }), :class => "form-control" %>
   <%= submit_tag t(:bulk_update), :class => "btn btn-primary" %>
-  <%= submit_tag t(:bulk_delete), :class => "btn btn-danger", :data => { :confirm => "Are you + sure?" } %>
+  <%= submit_tag t(:bulk_delete), :class => "btn btn-danger", :data => { :confirm => "Are you  sure?" } %>
 </p>
 <% end %>
 </div>
@@ -65,4 +64,24 @@
       $("input[name='ids[]']").prop("checked", false);
     }
   })
+
+    $( ".sortable" ).sortable({
+    axis: 'y',       // 限制只能上下拖拉
+    items: 'tr',     // 拖拉整个 tr
+    cursor: 'move',  // 变更拖拉时的 icon
+    handle: ".sortable_icon",  // 限制只有点 ☰ 才能开始拖拉，砍掉这行的话，会是整个 tr 都可以进行拖拉，你可以试试看
+    stop: function(e, ui){     // 当拖拉结束时，会调用这个方法
+      ui.item.children('td').effect('highlight', {}, 1000)
+    },
+    update: function(e, ui) {   // 当拖拉结束并且 DOM 上的位置变更时，会调用这个方法
+      reorder_url = ui.item.data('reorder-url')
+      position = ui.item.index()  // 取得顺序
+      $.ajax({
+       type: 'POST',
+       url: reorder_url,
+       dataType: 'json',
+       data: { position: position }
+      })
+    }
+  });
 </script>
