add growth page

--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
     <div class="navbar-brand">
-      <a href="/">人至践，则无敌</a>
+      <a href="/welcome">人至践，则无敌</a>
       <a href="/jobs">职缺</a>
       <a href="/resumes">简历</a>
-      <a href="/">成长</a>
+      <a href="/growths">成长</a>
       <a href="/events">大事</a>
     </div>
 
