edit and destroy only for job.user

--- a/app/views/jobs/_job.html.erb
+++ b/app/views/jobs/_job.html.erb
@@ -1,7 +1,7 @@
 
 
 <div class="col-md-12 job-box">
-  <% if current_user %>
+  <% if current_user && current_user == job.user %>
   <div class="pull-right">
   <%= link_to("Edit", edit_job_path(job), :class => "btn btn-xs btn-info") %>
   <br>
