--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -1,7 +1,7 @@
 <div class="col-md-12">
-<div class="pull-right">
+<!-- <div class="pull-right">
   <%= link_to("Add a job", new_admin_job_path, :class => "btn btn-default" ) %>
-</div>
+</div> -->
 
 <br><br>
 
