--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="col-md-8 col-md-offset-2">
 <h1>我的个人资料</h1>
 
 <p>Email: <%= @user.email %></p>
@@ -9,4 +9,7 @@
 <p>Location: <%= @user.profile.location %></p>
 <p>Tmiezone: <%= @user.time_zone  %></p>
 <p>Motto: <%= @user.profile.motto %></p>
+
+<%= link_to('修改密码', edit_registration_path(:user)) %>
+<%= link_to('修改个人资料', edit_user_path) %>
 </div>
