--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -6,6 +6,7 @@
       <a href="/resumes">简历</a>
       <a href="/growths">成长</a>
       <a href="/events">大事</a>
+      <a href="/posts">反馈</a>
     </div>
 
     <div class="collapse navbar-collapse">
