--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,12 +1,29 @@
+<div class="col-md-10 col-md-offset-1">
+<%= form_for Post.new do |f| %>
+  <div class="form-group">
+    <%= f.text_area :content, :class => "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.submit :class => "btn btn-primary" %>
+  </div>
+  <% end %>
 <% @posts.each do |post| %>
 
-<div class="panel panel-default">
+<div id="post-<%= post.id %>" class="panel panel-default">
   <div class="panel-heading">
     <%= post.user.display_name %>
+    <span class="pull-right"><%= post.user.created_at.to_s %></span>
   </div>
   <div class="panel-body">
-    <%= post.content %>
+    <%= simple_format(post.content) %>
+
+    <% if current_user && post.user == current_user %>
+      <p class="text-right">
+        <%= link_to "Delete", post_path(post), :method => :delete, :remote => true, :class => "btn btn-danger" %>
+      </p>
+      <% end %>
   </div>
 </div>
 
 <% end %>
+</div>
