--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-10 col-md-offset-1">
-<%= form_for Post.new do |f| %>
+<%= form_for Post.new, :remote => true do |f| %>
   <div class="form-group">
     <%= f.text_area :content, :class => "form-control" %>
   </div>
@@ -7,23 +7,10 @@
     <%= f.submit :class => "btn btn-primary" %>
   </div>
   <% end %>
+  <div id="post-list">
 <% @posts.each do |post| %>
-
-<div id="post-<%= post.id %>" class="panel panel-default">
-  <div class="panel-heading">
-    <%= post.user.display_name %>
-    <span class="pull-right"><%= post.user.created_at.to_s %></span>
-  </div>
-  <div class="panel-body">
-    <%= simple_format(post.content) %>
-
-    <% if current_user && post.user == current_user %>
-      <p class="text-right">
-        <%= link_to "Delete", post_path(post), :method => :delete, :remote => true, :class => "btn btn-danger" %>
-      </p>
-      <% end %>
-  </div>
-</div>
+<%= render :partial => "post", :locals => { :post => post} %>
 
 <% end %>
+</div>
 </div>
