--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
 <p>Legal_name: <%= @user.profile.legal_name %></p>
 <p>Username: <%= @user.profile.username %></p>
 <p>Wechat: <%= @user.profile.wechat %></p>
-<p>Birthday: <%= @user.profile.birthday %></p>
+<!-- <p>Birthday: <%= @user.profile.birthday %></p> -->
 <p>Location: <%= @user.profile.location %></p>
 <p>Tmiezone: <%= @user.time_zone  %></p>
 <p>Motto: <%= @user.profile.motto %></p>
