--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -25,10 +25,10 @@
     <%= f.text_field :wechat, :class => "form-control" %>
   </div>
 
-  <div class="form-group">
+  <!-- <div class="form-group">
     <%= f.label :birthday %>
-    <%= f.text_field :birthday, :class => "form-control" %>
-  </div>
+    <%= f.date_field :birthday, :class => "form-control" %>
+  </div> -->
 
   <div class="form-group">
     <%= f.label :location %>
@@ -48,7 +48,3 @@
 
 <% end %>
 </div>
-
-<script>
-  $("#user_profile_attributes_birthday").datepicker({ format: "yyyy-mm-dd"});
-</script>
