--- a/app/views/admin/jobs/_form.html.erb
+++ b/app/views/admin/jobs/_form.html.erb
@@ -17,7 +17,7 @@
 <%= f.input :wage_upper_bound %>
 <div class="form-group">
   <%= f.label :release %>
-  <%= f.text_field :release, :class => "form-control" %>
+  <%= f.date_select :release, :class => "form-control" %>
 </div>
 <%= f.input :skill %>
 <%= f.input :company %>
@@ -92,5 +92,4 @@
 
 <script>
   $("#job_city_id").select2( { theme: "bootstrap"} );
-  $("#job_release").datepicker({ format: "yyyy-mm-dd"});
 </script>
