--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -22,7 +22,8 @@
 
       <div class="col-md-4">
         <h3>
-          <a class="fly" href="<%= @job.source %>"><img src='<%= image_url ' airplane.png' %>'></a>
+          <a href="<%= @job.source %>"><%= @job.company %></a>
+
         </h3>
         <p><%= @job.industry %>
           |
@@ -35,9 +36,8 @@
     </div>
     <div class="col-md-2 pull-right">
       <div class="company">
-        <%= @job.company %>
         <% if @job.logo.present? %>
-        <%= link_to image_tag(@job.logo.url(:thumb)), @job.logo.url, :target => "_blank" %>
+        <%= link_to image_tag(@job.logo.url(:thumb)), @job.source, :target => "_blank" %>
         <% end %>
       </div>
     </div>
