add my though to welcome#index

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row">
     <div class="jumbotron">
-      <h1>Hello, world!</h1>
+      <h1>JUST DO IT</h1>
       <!-- <h2>目前总共有<%= User.count %>名使用者</h2> -->
       <p class="lead"><a class="btn btn-block" href="/jobs">KEEP GO ON</a></p>
     </div>
@@ -15,15 +15,19 @@
     <div class="panel-heading">
       <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-        工作渠道</a>
+        为什么有我？</a>
       </h4>
     </div>
     <div id="collapse1" class="panel-collapse collapse in">
       <div class="panel-body">
-        Ruby on Rails 的工作职缺在国内比较小众。
+        这个网站其实只有一个使命，就是让我能够更方便的找到工作。
+        <br>1.平时在几个招聘网站中跳来跳去，挺麻烦的。虽然最简单的解决方式是：放进收藏夹里。
+        但是，我想，既然我已经会做网页了，为什么不去做一个符合自己需求的网站呢？
+        <br>2.希望能够把有关成长和找工作的信息都集中在一起，这样生活不会显得太多事要做。
+        <!-- Ruby on Rails 的工作职缺在国内比较小众。
         <br>主要的原因是因为野生的 Ruby on Rails 程序员成长的门槛比较高，平均野生的 Ruby on Rails 程序员，长成需要 2-3 年以上的时间。
         不过由于 Ruby on Rails 搭建网站程序相当高效，使用 Rails 开发的效率是 PHP 或者是 JAVA 的十倍，
-        <br>所以 B 轮以下的创业公司，Ruby on Rails 程序员的招收需求以及薪资十分的高。
+        <br>所以 B 轮以下的创业公司，Ruby on Rails 程序员的招收需求以及薪资十分的高。 -->
       </div>
     </div>
   </div>
@@ -31,13 +35,22 @@
     <div class="panel-heading">
       <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-        如何挑选适合自己的工作</a>
+        为什么选择这种方式？</a>
       </h4>
     </div>
     <div id="collapse2" class="panel-collapse collapse">
       <div class="panel-body">
-        <br>新创公司，有良好导师可以给你进修建议，且充满挑战任务的
-        <br>中型规模公司，负责维护既有产品，以及开发部分新功能的</div>
+        <br>1.做一个有需求的网站，我就需要学会不断地体验，从“用户的角度”出发去思考，需要的是什么。
+        招聘网站有很多，而且功能很齐全。假设我只是模仿并且做一个招聘网站出来，那么其实意义不大。
+        我总会不自觉的反问自己，做出来了，然后呢？想要表达什么东西？这样让我不容易偏离实际。
+        <br>2.希望能够提高自己解决问题的能力。
+        <br>3.可以顺便把我学过的东西迁移进来，复习多几遍，这样才不会让我”白学”。
+        <br>4.学会联系人的基本需求和编程思想，把需求转换成一条条功能，然后想办法去实现。
+        <br>5.做网站倒逼自己去学习，每次想要把网站做得更好，提升网页速度以及体验感，想要减少自己操作时的重复劳动力时，我就要想办法看看有什么样的只是能够解决我这方面的问题。
+        <br>6.重点在于网站有一个反馈区，记录我的成长，我可以看到自己进步的速度以及不足。然后会不断地迭代更新。
+        <!-- <br>新创公司，有良好导师可以给你进修建议，且充满挑战任务的
+        <br>中型规模公司，负责维护既有产品，以及开发部分新功能的 -->
+      </div>
     </div>
   </div>
 </div>
