--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -91,10 +91,8 @@
 <% end %>
 </div>
 
-
-
 <hr>
-<%= f.input :description, as: :ckeditor %>
+<%= f.input :description, as: :ckeditor, input_html: {  ckeditor: { toolbar: 'mini' }} %>
 <%= f.input :is_hidden %>
 
 <%= f.submit "Submit" %>
