--- a/app/views/jobs/_job.html.erb
+++ b/app/views/jobs/_job.html.erb
@@ -3,20 +3,21 @@
 <div class="col-md-12 job-box">
   <% if current_user && current_user == job.user %>
   <div class="pull-right">
-  <%= link_to("Edit", edit_job_path(job), :class => "btn btn-xs btn-info") %>
+  <%= link_to("", edit_job_path(job), :class => "fa fa-pencil-square-o") %>
   <br>
-  <%= link_to("Destroy", job_path(job), :method => :delete, :class => "btn btn-xs btn-danger", :data => { :confirm => "Are you sure?" }) %>
+  <%= link_to("", job_path(job), :method => :delete, :class => "fa fa-trash", :data => { :confirm => "Are you sure?" }) %>
 </div>
 <% end %>
   <div class="col-md-6">
     <h3><%= link_to(job.title, job_path(job)) %> <span style="color:green"> <%= job.wage_lower_bound %>K - <%= job.wage_upper_bound %>K</span></h3>
-    <p><%= job.city.try(:name) %> | <%= job.job_experience %> | <%= job.education_background %></p>
     <p class="label label-default"></p>
+    <label class="badge"><%= job.skill %></label>
     <p style="color:grey">发布于<%= job.release %></p>
   </div>
-  <div class="col-md-4 pull-right">
+  <div class="col-md-5 pull-right">
     <h3><a href="<%= job.source %>"><%= job.company %></a></h3>
-    <p><%= job.industry %> | <%= job.financing_stage %> | <%= job.scale %></p>
+    <p><%= job.city.try(:name) %> | <%= job.job_experience %> | <%= job.education_background %></p>
+    <!-- <p><%= job.industry %> | <%= job.financing_stage %> | <%= job.scale %></p> -->
     <p><%= t(job.status, :scope => "job.status") %></p>
   </div>
 
